--- a/app/iot/webapp/test/flpSandbox.html
+++ b/app/iot/webapp/test/flpSandbox.html
@@ -46,7 +46,7 @@
 				"masterDetail-display": {
 					title: "IOT measures",
 					description: "IOT measures",
-					additionalInformation: "SAPUI5.Component=com.marcmauri.measures",
+					additionalInformation: "SAPUI5.Component=com.marcmauri.app.iot",
 					applicationType: "URL",
 					url: "../"
 				}
@@ -62,9 +62,9 @@
 		data-sap-ui-libs="sap.m, sap.ushell, sap.ui.core, sap.f, sap.ui.comp, sap.ui.table, sap.suite.ui.generic.template, sap.ui.generic.app"
 		data-sap-ui-theme="sap_fiori_3"
 		data-sap-ui-compatVersion="edge"
-		data-sap-ui-flexibilityServices='[{"applyConnector":"com/marcmauri/measures/test/changes_loader", "custom":true}]'
+		data-sap-ui-flexibilityServices='[{"applyConnector":"com/marcmauri/app/iot/test/changes_loader", "custom":true}]'
 		data-sap-ui-language="en"
-		data-sap-ui-resourceroots='{"com.marcmauri.measures": "../"}'
+		data-sap-ui-resourceroots='{"com.marcmauri.app.iot": "../"}'
 		data-sap-ui-frameOptions="allow"> // NON-SECURE setting for testing environment
 		</script>
 
